[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/kenney.nl/bit-pack/colored_transparent.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "pop"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}

[node name="Player" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 425, 0, 16, 16 )

[node name="Selection" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 612, 204, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Selection"]
autoplay = "pop"
anims/RESET = SubResource( 2 )
anims/pop = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="input_event" from="." to="." method="_on_Player_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Player_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Player_mouse_exited"]
